--- a/AUTHORS
+++ b/AUTHORS
@@ -12,8 +12,10 @@ Miklos Szeredi.
 Copyright:
 ==========
 
-Copyright (c) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2020
-              Werner Baumann <werner.baumann@onlinehome.de>
+Copyright (c) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2020,
+          2021, 2022
+          Ali Abdallah <ali.abdallah@suse.com>
+          Werner Baumann <werner.baumann@onlinehome.de>
 
     davfs2 is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
