[DATALAD RUNCMD] run codespell throughout but ignore fail
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w || :",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/THANKS
+++ b/THANKS
@@ -1,7 +1,7 @@
 davfs2 THANKS 2014-04-21
 ------------------------
 
-This file used to contain a list of contributers. But this list never was
+This file used to contain a list of contributors. But this list never was
 complete and I am not able to keep track of contributions.
 
 So I wand to thank all the people who helped in one or another way:
