--- a/NEWS
+++ b/NEWS
@@ -25,11 +25,11 @@ What is new in davfs2 1.6.0
 ===========================
 
 davfs2 no longer support the use of the Coda kernel file system. It would
-have required some chnges. But the fuse kernel file system si better suited
+have required some changes. But the fuse kernel file system si better suited
 anyway and is part of the official Linux kernel for many years now. So
 Coda is no longer required.
 
-The Neon library from version 0.31 on has a workaraound for some XML-bugs of
+The Neon library from version 0.31 on has a workaround for some XML-bugs of
 SharePoint concerning file names. Option "sharepoint_href_bug 1" will activate
 this workaround.
 
@@ -129,7 +129,7 @@ Support for Neon 0.29.
 Support for NTLM authentication (with Neon 0.29 only).
 
 Experimental support for commandline option "username" for use
-with pam_mount. I am not sure wether this is really usefull because
+with pam_mount. I am not sure wether this is really useful because
 I think that for typical use cases of pam_mount davfs2 is not
 well suited. Please report your experience with this option.
 
@@ -140,7 +140,7 @@ if a servercert is not trusted but silently not accept the certificate.
 What is new in davfs2 1.4.1
 ===========================
 
-For this version I got many bug fixes, informations and
+For this version I got many bug fixes, information and
 suggestions for improvement from Dirk Arend of the German
 company AVM. Thanks a lot.
 
@@ -152,7 +152,7 @@ and avoid useless further attempts.
 
 When attempts to upload changed files fail because of problems
 with the network connection, new upload attempts will be done with
-increasing time intervals to not waist bandwith with to many
+increasing time intervals to not waist bandwidth with to many
 useless attempts. When the davfs2 file system is unmounted while
 the connection is down changed files will stay in the cache and
 will be uploaded when the file system is mounted the next time.
