--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ davfs2 TODO 2014-04-21
 
 - write a GNU-style manual
 
-- multithreading for HTTP-requests and cache maintainance
+- multithreading for HTTP-requests and cache maintenance
 
 - restructure file name extraction and href construction
 
