--- a/man/davfs2.conf.5
+++ b/man/davfs2.conf.5
@@ -71,7 +71,7 @@ of \(cq\ \(cq, \(cq\(rs#\(cq instead of \(cq#\(cq, \(cq\(rs\(rs\(cq instead of
 .PP
 Values containing spaces, tabs or # may instead be enclosed in double quotes.
 But \(dq and \(cq must be escaped even within double quotes. If the starting line
-of a section is enclosed in double quotes, the square brakets must be within
+of a section is enclosed in double quotes, the square brackets must be within
 the quotes (like \(dq[/home/otto/with space]\(dq).
 
 .PP
@@ -251,7 +251,7 @@ Default: 0
 .TP
 .B if_match_bug
 Some servers do not handle If-Match and If-None-Match-headers correctly.
-This option tells \fB@PROGRAM_NAME@\fR to use HEAD instead of thes headers.
+This option tells \fB@PROGRAM_NAME@\fR to use HEAD instead of these headers.
 0 = no, 1 = yes.
 .br
 Default: 0
