--- a/NEWS
+++ b/NEWS
@@ -129,11 +129,11 @@ Support for Neon 0.29.
 Support for NTLM authentication (with Neon 0.29 only).
 
 Experimental support for commandline option "username" for use
-with pam_mount. I am not sure wether this is really useful because
+with pam_mount. I am not sure whether this is really useful because
 I think that for typical use cases of pam_mount davfs2 is not
 well suited. Please report your experience with this option.
 
-If option askauth ist set to 0 davfs2 will no longer ask the user
+If option askauth is set to 0 davfs2 will no longer ask the user
 if a servercert is not trusted but silently not accept the certificate.
 
 
