--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,25 @@
 # Copyright (C) 2006, 2007, 2008, 2009, 2010, 2012, 2013, 2014 Werner Baumann
+# Copyright (C) 2022-2024 Ali Abdallah
 
 # Copying and distribution of this file, with or without modification, are
 # permitted in any medium without royalty.
+What is new in davfs2 1.7.1
+===========================
+
+Bugfix release.
+
+- The project has been more to github [1], This will make it easier to track
+issues, receive PR requests, implement CI, etc...
+
+[1] https://github.com/alisarctl/davfs2
+
+
+What is new in davfs2 1.7.0
+===========================
+
+This release uses more portable code and it brings support to FreeBSD.  This
+release improves also file lookup when files are modified on the server side.
+
 
 What is new in davfs2 1.6.0
 ===========================
